--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   equatable: ^2.0.5
   dio: ^5.4.0 
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
