--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   equatable: ^2.0.5
   dio: ^5.4.0 
   shared_preferences: ^2.2.2
+  get_it: ^7.6.9
 
 dev_dependencies:
   flutter_test:
