Update add member screen avatars and profile setup

--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -26,3 +26,8 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/logo.png
+    - assets/images/avatars/
+    - assets/images/avatars/parent/
+    - assets/images/avatars/child/
+    - assets/images/avatars/family/
