--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   shared_preferences: ^2.2.2
   get_it: ^7.6.9
   curved_navigation_bar: ^1.0.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
