--- a/flutter_app/web/manifest.json
+++ b/flutter_app/web/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Guardian Grove",
-    "short_name": "flutter_app",
+    "short_name": "Guardian Grove",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
@@ -10,7 +10,7 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
+            "src": "icons/GuardianGrove_logo_NoText.png",
             "sizes": "192x192",
             "type": "image/png"
         },
@@ -20,13 +20,13 @@
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-maskable-192.png",
+            "src": "icons/GuardianGrove_logo_NoText.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "icons/Icon-maskable-512.png",
+            "src": "icons/GuardianGrove_logo_NoText.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
