--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   get_it: ^7.6.9
   curved_navigation_bar: ^1.0.3
   intl: ^0.20.2
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
