--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   intl: ^0.20.2
   flutter_staggered_animations: ^1.1.1
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
